@@ -21,6 +21,7 @@
 @string{IEEEMGWLETTERS = "IEEE Microwave and Guided Wave Letters"}
 @string{MWJ = "Microwave Journal"}
 @string{APMC = "Asia-Pacific Microwave Conference"}
+@string{BELLSTJ = "The Bell System Technical Journal"}
 
 %
 % books
@@ -757,4 +758,15 @@
  year    = {1977},
  pages   = {822-824},
  local   = "{01129220.pdf}",
+}
+
+@article{Schneider,
+ author  = {M. V. Schneider},
+ title   = "{Microstrip Lines for Microwave Integrated Circuits}",
+ journal = BELLSTJ,
+ volume  = {48},
+ month   = may,
+ year    = {1969},
+ pages   = {1421-1444},
+ local   = "{E000621341.pdf}",
 }
