@@ -1,7 +1,7 @@
 /*
  * tee.cpp - tee connector class implementation
  *
- * Copyright (C) 2003 Stefan Jahn <stefan@lkcc.org>
+ * Copyright (C) 2003, 2004 Stefan Jahn <stefan@lkcc.org>
  *
  * This is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: tee.cpp,v 1.2 2003/12/26 14:04:07 ela Exp $
+ * $Id: tee.cpp,v 1.3 2004/09/09 11:31:51 ela Exp $
  *
  */
 
@@ -47,4 +47,11 @@ tee::tee () : circuit (3) {
   setS (3, 2,  2.0 / 3.0);
   setS (3, 3, -1.0 / 3.0);
   type = CIR_TEE;
+}
+
+void tee::initDC (dcsolver *) {
+  setVoltageSources (3);
+  voltageSource (1, 1, 2);
+  voltageSource (2, 1, 3);
+  voltageSource (3, 2, 3);
 }
