@@ -1,7 +1,7 @@
 /*
  * tee.h - tee connector class definitions
  *
- * Copyright (C) 2003 Stefan Jahn <stefan@lkcc.org>
+ * Copyright (C) 2003, 2004 Stefan Jahn <stefan@lkcc.org>
  *
  * This is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: tee.h,v 1.3 2004/02/17 15:30:58 ela Exp $
+ * $Id: tee.h,v 1.4 2004/09/09 11:31:51 ela Exp $
  *
  */
 
@@ -29,6 +29,7 @@ class tee : public circuit
 {
  public:
   tee ();
+  void initDC (dcsolver *);
 };
 
 #endif /* __TEE_H__ */
