@@ -1,3 +1,9 @@
+2004-09-09  Stefan Jahn  <stefan@lkcc.org>
+
+	* dcsolver.cpp: New simulation property 'saveAll' used to
+	prevent saving all nodes and operating points when subcircuits
+	are in place.
+
 2004-09-07  Stefan Jahn  <stefan@lkcc.org>
 
 	* circuit.cpp (voltageSource): New helper function setting
